@@ -114,8 +114,10 @@ int main(int argc, char *argv[])
 	printf("#define COMBINE_INSTRUCTIONS %s_combine_instructions\n", a);
 	printf("#define DISASSEMBLE %s_cpu_disassemble_instr\n", a);
 
-	printf("\nextern bool single_step;\nextern int single_step_breakpoint;"
-	    "\nextern int debugger_n_steps_left_before_interaction;\n"
+	printf("\nextern bool single_step;\n"
+	    "extern bool about_to_enter_single_step;\n"
+	    "extern int single_step_breakpoint;\n"
+	    "extern int debugger_n_steps_left_before_interaction;\n"
 	    "extern int old_quiet_mode;\n"
 	    "extern int quiet_mode;\n");
 
