@@ -250,6 +250,9 @@ void debug_indentation(int diff);
 void debug(const char *fmt, ...);
 void fatal(const char *fmt, ...);
 void debugmsg_init();
+int debugmsg_register_subsystem(const char* name);
+void debugmsg_change_settings(char *subsystem_name, char *n);
+void debugmsg_print_settings(const char *subsystem_name);
 void debugmsg_add_verbosity_level(int subsystem, int verbosity_delta);
 void debugmsg_set_verbosity_level(int subsystem, int verbosity);
 void debugmsg(int subsystem, const char *name, int verbosity_required, const char *fmt, ...);
